fixed spacing and punctuation errors on about me.

--- a/src/css/AboutMeImage.css
+++ b/src/css/AboutMeImage.css
@@ -9,7 +9,7 @@
   .about-me-image {
     height: 225px;
     width: 290px;
-    margin-left: 10px;
+    padding-bottom: 2rem;
   }
 }
 
@@ -18,7 +18,6 @@
   .about-me-image {
     height: 275px;
     width: 375px;
-    margin-left: 10px;
   }
 }
 
@@ -35,7 +34,6 @@
   .about-me-image {
     height: 350px;
     width: 450px;
-    margin-left: 10px;
   }
 }
 
